@@ -33,6 +33,9 @@ import org.apache.hadoop.hdfs.protocol.proto.DataTransferProtos.Status;
 import org.apache.hadoop.hdfs.protocolPB.PBHelper;
 import org.apache.hadoop.hdfs.security.token.block.BlockTokenIdentifier;
 import org.apache.hadoop.hdfs.security.token.block.InvalidBlockTokenException;
+import org.apache.hadoop.hdfs.server.datanode.CachingStrategy;
+import org.apache.hadoop.hdfs.shortcircuit.ClientMmap;
+import org.apache.hadoop.net.NetUtils;
 import org.apache.hadoop.security.token.Token;
 import org.apache.hadoop.util.DataChecksum;
 
@@ -441,24 +444,17 @@ public class RemoteBlockReader2 implements BlockReader {
         firstChunkOffset, len, peer, datanodeID, peerCache, tracer);
   }
 
-  static void checkSuccess(BlockOpResponseProto status, Peer peer,
-      ExtendedBlock block, String file) throws IOException {
-    if (status.getStatus() != Status.SUCCESS) {
-      if (status.getStatus() == Status.ERROR_ACCESS_TOKEN) {
-        throw new InvalidBlockTokenException(
-            "Got access token error for OP_READ_BLOCK, self=" +
-                peer.getLocalAddressString() + ", remote=" +
-                peer.getRemoteAddressString() + ", for file " + file +
-                ", for pool " + block.getBlockPoolId() + " block " +
-                block.getBlockId() + "_" + block.getGenerationStamp());
-      } else {
-        throw new IOException("Got error for OP_READ_BLOCK, self=" +
-            peer.getLocalAddressString() + ", remote=" +
-            peer.getRemoteAddressString() + ", for file " + file +
-            ", for pool " + block.getBlockPoolId() + " block " +
-            block.getBlockId() + "_" + block.getGenerationStamp());
-      }
-    }
+  static void checkSuccess(
+      BlockOpResponseProto status, Peer peer,
+      ExtendedBlock block, String file)
+      throws IOException {
+    String logInfo = "for OP_READ_BLOCK"
+      + ", self=" + peer.getLocalAddressString()
+      + ", remote=" + peer.getRemoteAddressString()
+      + ", for file " + file
+      + ", for pool " + block.getBlockPoolId()
+      + " block " + block.getBlockId() + "_" + block.getGenerationStamp();
+    DataTransferProtoUtil.checkBlockOpStatus(status, logInfo);
   }
 
   @Override
